# nlp-prototype

./: .gitignore  Makefile  README.md  main.cpp  nndep_read.cpp  parse_arxiv_meta.ipynb  release.nix  requirements.txt  run_in_script.sh  shell.nix
hscpp/standard-template-library/: standard-template-library.cabal
hscpp/standard-template-library/lib/: STL.hs
paraphrase/autoencode/: autoencode.cabal
paraphrase/autoencode/exe/: XML2sentences.hs  fetch.hs  treebank.hs
paraphrase/autoencode/trie/: Predefined.hs  Print.hs  Type.hs  trie.hs  trie2.hs
paraphrase/symbolic/: symbolic.cabal
paraphrase/symbolic/exe/: llvmgen.hs  trie.hs
paraphrase/symbolic/lib/: Print.hs  Type.hs
query/: README.md  client.hs  command.sh  command2.sh  compile.sh  config.json  config.nix  default.nix  invoke.cpp  query.cabal  query.hs  release.nix  shell.nix  test.hs
query-common/: default.nix  query-common.cabal  release.nix
query-common/lib/: Type.hs
query-common/lib/CloudHaskell/: Server.hs
query-common/lib/Network/: Util.hs
query-common/lib/QueryServer/: Type.hs
query/csrc/: fstream.cpp  invoke.cpp  stub.cc  template.hh
query/exe/: Broadcast.hs  CoreNLP.hs  JsonUtil.hs  Network.hs  Worker.hs  client.hs  cpptest.hs  query.hs
query/exe/CloudHaskell/: Server.hs
query/lib/: Type.hs
query/lib/Util/: FStream.hs  Json.hs  Pipe.hs
query/test/hedis/: hedis-test.hs
rnn++/: CMakeLists.txt  Doxyfile  README.md  config.nix  default.nix  shell-python.nix  shell.nix
rnn++/app/: benchmark_fileio.cpp  etl_ygpdb.cpp  hdf5io.cpp  index_words.cpp  list_words.cpp  nndep_reader.cpp  parser_crnn.cpp  parser_eval.cpp  parser_model1.cpp  parser_model4.cpp  phrases_model4.cpp  rss_dump.cpp  show_words_in_voca.cpp  simple_parser.cpp  stress_query_engine.cpp  test_all.cpp  token_tagger_app.cpp  train_model0.cpp  train_model1.cpp  train_model2.cpp  train_model4.cpp  wikidata_annotator.cpp  wikidata_etl.cpp  word2vec_eval.cpp  word2vec_train.cpp  word_context.cpp  word_count.cpp  word_count_collect.cpp  word_importance_build.cpp  word_importance_export.cpp  wordsim_table.cpp  ygpdb_dump.cpp  ygpdb_etl.cpp
rnn++/parser/: basic_type.h  compute.cpp  compute.h  config.cpp  config.h  node.h  optimizers.cpp  optimizers.h  param.cpp  param.h  parser.cpp  parser.h  simple_model.h  voca.cpp  voca.h  wordvec.cpp  wordvec.h
rnn++/scripts/: corenlp.py  dump_ygpdb.py
rnn++/src/: dataset.cpp  dataset.h
rnn++/src/data_source/: corenlp.h  corenlp_helper.cpp  corenlp_helper.h  corenlp_utils.cpp  corenlp_utils.h  db.cpp  db.h  db_query.h  etl_ygpdb.h  indexes.h  rnn_row_filepath.cpp  rnn_row_filepath.h  rss.cpp  rss.h  ygp_db.cpp  ygp_db.h  ygp_etl.cpp  ygp_etl.h  ygp_query.h  ygp_row_filepath.cpp  ygp_row_filepath.h
rnn++/src/models/: crnn.h
rnn++/src/parser/: basic_type.h  compute.cpp  config.cpp  config.h  node.cpp  node.h  optimizers.h  param.cpp  parser.cpp  parser.h  voca.h  wordvec.h
rnn++/src/rnn/: common.h
rnn++/src/similarity/: config.cpp  config.h  corenlp_helper.cpp  corenlp_helper.h  dataset.cpp  dataset.h  dep_similarity.cpp  dep_similarity.h  lookup_tables.h  phrase_suggestion.cpp  phrase_suggestion.h  query_engine.cpp  query_engine.h  query_output.cpp  query_output.h  query_processor.h  query_types.h  rss.cpp  rss.h  scored_sentence.h  scoring.cpp  scoring.h  similarity.cpp  similarity.h  similarity_measure.h  token_map_reducer.h  word_importance.cpp  word_importance.h  ygp.cpp  ygp.h
rnn++/src/tagger/: token_tagger.cpp  token_tagger.h
rnn++/src/wiki/: io.h  property_triple.h  sorted_entity.fb  sorted_entity_generated.h  wikidata.cpp  wikidata.h
rnn++/src/word2vec/: word2vec.cpp  word2vec.h
rnn++/src/wordrep/: annotated_sentence.cpp  annotated_sentence.h  config.cpp  config.h  dep_graph.cpp  dep_graph.h  dep_parsed.cpp  dep_parsed.h  indexes.h  (+43 more)
rnn++/tests/: query_engine_acceptance.py  query_processing.cpp  query_processing.h  test_context_rnn.cpp  test_context_rnn.h  test_dp_merging.cpp  test_dp_merging.h  test_simple_model.cpp  test_simple_model.h  test_tree_spans.cpp  test_tree_spans.h  test_voca_wordvec.cpp  test_voca_wordvec.h
rnn++/utils/: algorithm.h  base_types.h  binary_tree.h  filesystem.cpp  filesystem.h  hash.h  hdf5.cpp  hdf5.h  index_range.h  json.cpp  json.h  linear_algebra.h  logger.cpp  logger.h  loop_gen.h  math.cpp  math.h  math_funname.h  optional.h  parallel.h  parallel_algorithm.h  persistent_vector.h  print.h  profiling.cpp  profiling.h  random.cpp  random.h  span.h  string.cpp  string.h  type_param.cpp  type_param.h  variant.h  versioned_name.cpp  versioned_name.h
rnn++/wrapper/: enginewrapper.cpp  enginewrapper.h
sentence2vec/: CMakeLists.txt  README.md  shell.nix
sentence2vec/app/: dataset_indexer.cpp  indexing_text.cpp  model_evaluation.cpp  query_rss.cpp  query_similarity.cpp  query_ygp.cpp  similarity.cpp  trainer.cpp
sentence2vec/models/: sentence2vec.cpp  sentence2vec.h
sentence2vec/tests/: json.cpp  test_sent2vec.cpp  test_sent2vec.h
sentence2vec/wordrep/: sentence2vec.cpp  sentence2vec.h
symbolic/: default.nix  release.nix  symbolic.cabal
symbolic/exe/: Fib.hs  Test.hs  eval.hs  llvm.hs  llvmgen.hs  trie.hs
symbolic/tests/: test.hs
tf-kld/: CMakeLists.txt  MSPara.cpp  README.md  main.cpp  tokenizer.py
tf-kld/app/: MSPara.cpp  YGP_TFIDF.cpp  main.cpp  math.cpp  pair_paraphrase.cpp  tfkld.cpp
tf-kld/nix/: shell-cpp.nix  shell-tfkld.nix
tf-kld/scripts/: preprocessing.py  shuffling.py
tf-kld/src/: Common.h  Matrix.cpp  Matrix.h  Query.cpp  Query.h  SVM.cpp  SVM.h  TFIDF.cpp  TFIDF.h  TFKLD.cpp  TFKLD.h  Type.h  Vocab.cpp  Vocab.h
tf-kld/tests/: IncSVD.cpp  README.md  readYGP.cpp  test01.cpp  test01.h  test02.cpp  test02.h  testMath.cpp  testMath.h  testSVD2.cpp
tf-kld/utils/: h5io.cpp  h5io.h  help.cpp  help.h
word2vec/: .gitignore  CMakeLists.txt  Makefile  README.md  WordEmbed.cpp  WordEmbed.h  default.nix  distance.cpp  grassmannian.cpp  pca.cpp  run.sh  utils.cpp  utils.h  word2vec.cpp  word2vec_old.cpp
word2vec/app/: voca_builder.cpp  wordvec_trainer.cpp
word2vec/utils/: guardemall.sh  headerguard_gen.py
(+385 files in other folders)
