Name:                   query-common
Version:                0.1
Cabal-version:          >=1.8
Tested-with:            GHC >= 7.10
Build-type:             Simple
Synopsis:               querying result
Description:            querying result
License:                OtherLicense
License-file:           LICENSE
Author:                 UpHere, Inc.
Maintainer:             Ian-Woo Kim <ianwookim@gmail.com>
Homepage:               https://github.com/uphere-co/nlp-prototype
Bug-reports:            https://github.com/uphere-co/nlp-prototype

Category:               Query
Stability:              Experimental

Extra-source-files:     

source-repository HEAD
  type:                 git
  location:             https://github.com/uphere-co/nlp-prototype
  branch:               master

-------------------------------------------------------
  
Library
  hs-source-dirs:       lib
  Build-depends:        base,
                        --
                        binary,
                        bytestring,
                        hashable,
                        text

  Exposed-modules:
                        QueryServer.Type
                  
  Other-modules:        

  ghc-options:          -O2 -Wall
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind
                        -fno-warn-orphans

  ghc-prof-options:     -caf-all -auto-all

