Name:                   query
Version:                0.1
Cabal-version:          >=1.8
Tested-with:            GHC >= 7.10
Build-type:             Simple
Synopsis:               querying result
Description:            querying result
License:                OtherLicense
License-file:           LICENSE
Author:                 UpHere, Inc.
Maintainer:             Ian-Woo Kim <ianwookim@gmail.com>
Homepage:               https://github.com/uphere-co/nlp-prototype
Bug-reports:            https://github.com/uphere-co/nlp-prototype

Category:               Query
Stability:              Experimental

Extra-source-files:     

source-repository HEAD
  type:                 git
  location:             https://github.com/uphere-co/nlp-prototype
  branch:               master

-------------------------------------------------------
  
Library
  hs-source-dirs:       lib
  Build-depends:        base,
                        --
                        binary,
                        bytestring,
                        conduit,
                        conduit-extra,
                        unix

  Exposed-modules:
                        Util.Json
                        Type
                  
  Other-modules:        

  ghc-options:          -O2 -Wall
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind
                        -fno-warn-orphans

  ghc-prof-options:     -caf-all -auto-all

-------------------------------------------------------

Executable query
  Main-is:              query.hs
  hs-source-dirs:       exe
  other-modules:       
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:      similarity, parser, tbb, hdf5_cpp, stdc++
  c-sources:            csrc/invoke.cpp
  cc-options:           -std=c++14
  build-depends:        base,
                        --
                        aeson,
                        base64-bytestring,
                        
                        binary,
                        bytestring,
                        conduit,
                        conduit-extra,
                        connection,
                        containers,

                        directory,
                        distributed-process,
                        filepath,
                        http-client,
                        http-client-tls,
                        http-types,
                        monad-loops,
                        network-transport-zeromq,
                        process,
                        
                        stm,
                        text,
                        transformers,
                        unix,
                        uuid,
                        --
                        query

-------------------------------------------------------

                        
Executable client
  Main-is:              client.hs
  hs-source-dirs:       exe

  other-modules:       
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:            
                        
  build-depends:        base,
                        --
                        aeson,
                        base64-bytestring,
                        binary,
                        bytestring,
                        containers,
                        distributed-process,
                        network-transport-zeromq,
                        process,
                        text,
                        --
                        query
                        