Name:                   query
Version:                0.1
Cabal-version:          >=1.8
Tested-with:            GHC >= 7.10
Build-type:             Simple
Synopsis:               querying result
Description:            querying result
License:                OtherLicense
License-file:           LICENSE
Author:                 UpHere, Inc.
Maintainer:             Ian-Woo Kim <ianwookim@gmail.com>
Homepage:               https://github.com/uphere-co/nlp-prototype
Bug-reports:            https://github.com/uphere-co/nlp-prototype

Category:               Query
Stability:              Experimental

Extra-source-files:     

source-repository HEAD
  type:                 git
  location:             https://github.com/uphere-co/nlp-prototype
  branch:               master

Executable query
  Main-is:              query.hs
  hs-source-dirs:       exe
  other-modules:       
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:      similarity, parser, tbb, hdf5_cpp, fmt, pqxx, stdc++, stdc++fs
  c-sources:            csrc/stub.cc
  cc-options:           -std=c++14
  build-depends:        base,
                        --
                        aeson,
                        attoparsec,
                        base64-bytestring,
                        binary,
                        bytestring,
                        conduit,
                        conduit-extra,
                        connection,
                        containers,
                        directory,
                        distributed-process,
                        fficxx-runtime,
                        filepath,
                        http-client,
                        http-client-tls,
                        http-types,
                        monad-loops,
                        network-simple,
                        network-transport,
                        network-transport-uphere,
                        process,
                        scientific,
                        stm,
                        text,
                        transformers,
                        unix,
                        unordered-containers,
                        uuid,
                        vector,
                        --
                        query-binding,
                        query-common


