Name:                   symbolic
Version:                0.0
Cabal-version:          >=1.8
Tested-with:            GHC >= 7.10
Build-type:             Simple
Synopsis:               Symbolic computation
Description:
  Efficient symbolic computation library

License:                OtherLicense
License-file:           LICENSE
Author:                 UpHere, Inc.
Maintainer:             Ian-Woo Kim <ianwookim@gmail.com>
Homepage:               https://github.com/uphere-co/nlp-prototype
Bug-reports:            https://github.com/uphere-co/nlp-prototype

Category:               Symbolic Computation
Stability:              Experimental

Extra-source-files:     

source-repository HEAD
  type:                 git
  location:             https://github.com/uphere-co/nlp-prototype
  branch:               master
  tag:                  0.0

Library
  hs-source-dirs:       lib
  Build-depends:        base,
                        array,
                        binary,
                        bytestring,
                        containers,
                        hashable,
                        language-c,
                        llvm-general,
                        llvm-general-pure,
                        lens,
                        MemoTrie,
                        mtl,
                        pretty,
                        transformers,
                        unordered-containers,
                        vector
                        

  Exposed-modules:
                        Symbolic.CodeGen.C
                        Symbolic.CodeGen.LLVM.Exp
                        Symbolic.CodeGen.LLVM.JIT
                        Symbolic.CodeGen.LLVM.Operation
                        Symbolic.Differential
                        Symbolic.Eval
                        Symbolic.Predefined
                        Symbolic.Print
                        Symbolic.Simplify
                        Symbolic.Type

  Other-modules:        

  ghc-options:          -O2 -Wall -Werror
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind
                        -fno-warn-orphans
  ghc-prof-options:     -caf-all -auto-all
  
Executable trie
  Main-is:              trie.hs
  hs-source-dirs:       exe

  other-modules:       
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:            
                        
  build-depends:        base                            >= 4.7 && < 4.9,
                        --
                        hashable,
                        MemoTrie,
                        transformers,
                        unordered-containers,
                        vector,
                        --
                        symbolic

Executable llvmgen
  Main-is:              llvmgen.hs
  hs-source-dirs:       exe

  other-modules:       
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:            
                        
  build-depends:        base                            >= 4.7 && < 4.9,
                        --
                        containers,
                        hashable,
                        llvm-general,
                        llvm-general-pure,
                        MemoTrie,
                        mtl,
                        vector,
                        transformers,
                        --
                        symbolic
                        